
[tool.poetry]
name = "inspectorio"
version = "0.5.1"
description = "Python wrapper for the Inspectorio API"
authors = ["Matthias Brenninkmeijer <matthias@brennotten.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matbmeijer/inspectorio"
documentation = "https://matbmeijer.github.io/inspectorio"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
respx = "^0.20.2"
pytest-mock = "^3.12.0"
pre-commit = "3.5.0"
ruff = "^0.2.1"
pdoc = "^14.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
